--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/landing/styles.css": "/css/landing/styles.css"
+    "/css/landing/styles.css": "/css/landing/styles.css",
+    "/css/login/styles.css": "/css/login/styles.css",
+    "/css/register/styles.css": "/css/register/styles.css"
 }
