creating admin dashboard layout, creating admin vue pages components, finishing admin dashboard design integrated with backend, semi-finished navbar and sidebar

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/css/landing/styles.css": "/css/landing/styles.css",
     "/css/login/styles.css": "/css/login/styles.css",
     "/css/register/styles.css": "/css/register/styles.css",
-    "/css/user/home.css": "/css/user/home.css"
+    "/css/user/home.css": "/css/user/home.css",
+    "/css/admin/styles.css": "/css/admin/styles.css"
 }
