--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "vue-custom-datepicker": "^1.1.6",
-        "vue-material-datepicker": "^2.0.1"
+        "vue-material-datepicker": "^2.0.1",
+        "vuex": "^3.5.1"
     }
 }
