--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "fullpage.js": "^3.0.9",
         "moment": "^2.29.0",
         "vue-custom-datepicker": "^1.1.6",
         "vue-material-datepicker": "^2.0.1",
