--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "fullpage.js": "^3.0.9",
         "moment": "^2.29.0",
         "vue-custom-datepicker": "^1.1.6",
+        "vue-event-calendar": "^1.5.2",
         "vue-material-datepicker": "^2.0.1",
         "vuex": "^3.5.1"
     }
