--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19.2",
+        "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "expose-loader": "^1.0.1",
@@ -27,6 +27,7 @@
     "dependencies": {
         "fullpage.js": "^3.0.9",
         "hooper": "^0.3.4",
+        "jquery-confirm": "^3.3.4",
         "moment": "^2.29.0",
         "owl.carousel": "^2.3.4",
         "select2": "^4.0.13",
