--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=loundery
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=heroku_f4d887a31e9f3c5
+DB_USERNAME=b5cf90c60f7655
+DB_PASSWORD=53682d4b
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
