--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+./.env
 /node_modules
 /public/hot
 /public/storage
@@ -9,4 +10,3 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
